log
Thu 24 Aug 2023 03:04:59 PM UTC: 
 tests:  0|6
total_score: 0/70
9c02bb4
Sat 26 Aug 2023 07:09:10 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:9: error: expected ‘;’ before ‘newList’
   36 |         newList->tail = NULL;
      |         ^~~~~~~
list.c:38:5: error: expected ‘;’ before ‘}’ token
   38 |     }
      |     ^
Compilation failed
f785d45
Sat 26 Aug 2023 07:09:54 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
6fb25d3
Sat 26 Aug 2023 07:15:46 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 25/70
29e02a4
Sat 26 Aug 2023 07:27:27 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
35dcdfe
Sun 27 Aug 2023 12:17:45 AM UTC: 
 list.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d4e58fe
Sun 27 Aug 2023 12:24:27 AM UTC: 
 list.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
3d528e5
